--- a/src/main/webapp/app/layouts/footer/footer.component.html
+++ b/src/main/webapp/app/layouts/footer/footer.component.html
@@ -1,3 +1,3 @@
 <div class="footer">
-  <p jhiTranslate="footer">TBD updates are pending</p>
+  <p jhiTranslate="footer">TBD A new footer will be placed here!!</p>
 </div>
