--- a/src/main/webapp/app/home/home.component.html
+++ b/src/main/webapp/app/home/home.component.html
@@ -1,9 +1,9 @@
 <div class="row">
-  <div class="col-md-3">
-    <span class="hipster img-fluid rounded"></span>
+  <div class="col-md-5">
+    <img height="50%" src="/content/images/conf-1.jpg" alt="conference" />
   </div>
 
-  <div class="col-md-9">
+  <div class="col-md-7">
     <h1 class="display-4"><span jhiTranslate="home.title">Welcome to Events Online</span></h1>
     <p class="lead" jhiTranslate="home.subtitle">Your online events management platform!</p>
     <div>
@@ -26,6 +26,16 @@
           <a class="alert-link" routerLink="/account/register" jhiTranslate="global.messages.info.register.link">Register a new account</a>
         </div>
       }
+    </div>
+    <h2 jhiTranslate="home.events.popular">Upcoming Events</h2>
+    <div class="embed-responsive embed-responsive-21by9">
+      <iframe
+        height="500"
+        width="100%"
+        class="embed-responsive-item"
+        src="https://www.youtube.com/embed/OMv0g5Mbo-M?rel=0"
+        allowfullscreen
+      ></iframe>
     </div>
   </div>
 </div>
