--- a/src/main/webapp/app/home/home.component.html
+++ b/src/main/webapp/app/home/home.component.html
@@ -1,8 +1,8 @@
 <div class="row">
-  <div class="col-md-5">
+  <div class="col-md-4">
     <img height="50%" src="/content/images/conf-1.jpg" alt="conference" />
   </div>
-
+  <div class="col-md-1"></div>
   <div class="col-md-7">
     <h1 class="display-4"><span jhiTranslate="home.title">Welcome to Events Online</span></h1>
     <p class="lead" jhiTranslate="home.subtitle">Your online events management platform!</p>
